# Self-Landing-Rocket

./: .gitignore  README.md  pyproject.toml
policies/rllib_dqn_best/: algorithm_state.pkl  class_and_ctor_args.pkl
policies/rllib_ppo_best/: algorithm_state.pkl  class_and_ctor_args.pkl
ray_results/dqn_rocket/: basic-variant-state-2025-12-16_16-16-04.json  basic-variant-state-2025-12-16_16-35-31.json  basic-variant-state-2025-12-16_18-03-57.json  basic-variant-state-2025-12-16_20-12-03.json  basic-variant-state-2025-12-16_21-10-27.json  basic-variant-state-2026-02-27_09-52-34.json  basic-variant-state-2026-02-27_09-58-23.json  basic-variant-state-2026-02-27_11-38-57.json  basic-variant-state-2026-02-27_17-57-59.json  basic-variant-state-2026-03-22_17-53-34.json  experiment_state-2025-12-16_16-16-04.json  experiment_state-2025-12-16_16-35-31.json  experiment_state-2025-12-16_18-03-57.json  experiment_state-2025-12-16_20-12-03.json  experiment_state-2025-12-16_21-10-27.json  experiment_state-2026-02-27_09-52-34.json  experiment_state-2026-02-27_09-58-23.json  experiment_state-2026-02-27_11-38-57.json  experiment_state-2026-02-27_17-57-59.json  experiment_state-2026-03-22_17-53-34.json  tuner.pkl
ray_results/ppo_rocket/: basic-variant-state-2026-02-27_09-40-07.json  basic-variant-state-2026-02-27_17-00-16.json  basic-variant-state-2026-03-22_19-18-56.json  basic-variant-state-2026-03-22_19-36-04.json  experiment_state-2026-02-27_09-40-07.json  experiment_state-2026-02-27_17-00-16.json  tuner.pkl  (+2 more)
website/: GUdomains.sh  _quarto.yml  index.qmd  methods.qmd  results.qmd
(+456 files in other folders)
